# GameHomework

./: .clang-format  .gitignore  .gitignore~  <stdin>  CMakeLists.txt  GameHomework1  GameUtils.cpp  GameUtils.h  Hmwk.1.Assignment.sln  Hmwk.1.Assignment.vcxproj  Hmwk.1.Assignment.vcxproj.filters  Readme.md
Assets/Config/: level1.xml
Source/: Actor.cpp  Actor.h  ArtAssetLibrary.cpp  ArtAssetLibrary.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Carrier.cpp  Carrier.h  Component.cpp  Component.h  ComponentFactories.cpp  Definitions.h  Factory.cpp  Factory.h  Game.cpp  Game.h  GameAssetLibrary.h  GamePhysics.cpp  GamePhysics.h  GameUtils.h  GraphicsDevice.cpp  GraphicsDevice.h  Infantry.cpp  Infantry.h  InputDevice.cpp  InputDevice.h  Object.cpp  Object.h  ObjectFactory.h  Physics.cpp  PhysicsAssetLibrary.cpp  PhysicsAssetLibrary.h  PhysicsComponent.cpp  PhysicsComponent.h  Player.cpp  Player.h  RenderComponent.cpp  RenderComponent.h  Rigidbody.cpp  (+14 more)
Source/tinyxml/: tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  xmltest.cpp
Temp/: CL.read.1.tlog  CL.write.1.tlog  Hmwk.1.Assignment.lastbuildstate  cl.command.1.tlog  vc110.idb
include/: Actor.h  ArtAssetLibrary.h  Bullet.h  Carrier.h  Component.h  ComponentFactories.h  ComponentLibrary.h  Definitions.h  Factory.h  Game.h  GameFunctions.h  GameUtils.h  GraphicsDevice.h  Infantry.h  InputDevice.h  Object.h  Physics.h  PhysicsAssetLibrary.h  Player.h  Rigidbody.h  Rock.h  Sprite.h  Texture.h  Timer.h  View.h
